--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kayn",
-  "version": "0.10.2",
+  "name": "rengar",
+  "version": "0.10.3",
   "main": "index.js",
   "scripts": {
     "example": "yarn lint-example; yarn build && babel ./example.js -o ./example.babel.js && node example.babel.js",
@@ -20,7 +20,7 @@
     "generate-api-cov": "babel-node ./_scripts/generate_api_cov_button"
   },
   "types": "./typings/index.d.ts",
-  "repository": "https://github.com/cnguy/kayn.git",
+  "repository": "https://github.com/beckerin/rengar.git",
   "author": "Chau Nguyen <chautnguyen96@gmail.com>",
   "license": "MIT",
   "devDependencies": {
